Cleanup the code
The changes suggested in Chew's review have been implemented, along with the update command being a lot neater